# k8stun

./: .dockerignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  RELEASING.md  cliff.toml
.github/workflows/: ci.yml  release.yml
src/: dns.rs  dns_forward_macos.rs  dns_intercept.rs  dns_resolver.rs  k8s.rs  main.rs  pipe.rs  stack.rs  tun.rs  vip.rs
src/api/: dashboard.html  dashboard.rs  handlers.rs  mod.rs  types.rs
src/dns/: forward_macos.rs  intercept.rs  mod.rs  query.rs  resolver.rs
src/stack/: common.rs  lwip.rs  mod.rs  smoltcp.rs
